--- a/Core/Server/WebApp/Views/Home/Index.cshtml
+++ b/Core/Server/WebApp/Views/Home/Index.cshtml
@@ -1,8 +1,20 @@
-﻿@{
+﻿@model Blogs
+@{
     ViewData["Title"] = "BlogEngine";
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    
+    @foreach (var blog in Model.AllBlogs)
+    {
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">@blog.Name</h5>
+                <h6 class="card-subtitle mb-2 text-muted">@blog.Author</h6>
+                <p class="card-text">@blog.Category</p>
+                <a href="#" class="card-link">Card link</a>
+                <a href="#" class="card-link">Another link</a>
+            </div>
+        </div>
+    }
 </div>
