--- a/Core/Frontend/BlazorClient/Pages/Blogs.razor
+++ b/Core/Frontend/BlazorClient/Pages/Blogs.razor
@@ -1,19 +1,19 @@
 @inject HttpClient Http;
+@using BlazorClient.Models;
 
-<div class="container">
-    @foreach (var blog in blogs)
-    {
+@foreach (var blog in blogs)
+{
+    <div class="container">
         <div class="card" style="width: 18rem;">
             <div class="card-body">
                 <h5 class="card-title">@blog.Name</h5>
                 <h6 class="card-subtitle mb-2 text-muted">@blog.Author</h6>
                 <p class="card-text">@blog.Category</p>
-                <a href="#" class="card-link">Card link</a>
-                <a href="#" class="card-link">Another link</a>
+                <a href="" class="nav-link">Read</a>
             </div>
         </div>
-    }
-</div>
+    </div>
+}
 
 @code {
     private List<Blog> blogs = new List<Blog>();
@@ -27,22 +27,9 @@
             Console.WriteLine("There are no blogs. Sorry.");
             return;
         }
-        
-        Console.WriteLine(blogs[0].Name);
 
         blogs = blogs
             .OrderBy(b => b.Name)
-            .ToList();
-    }
-
-    public class Blog
-    {
-        public string Id { get; set; }
-        public string Author { get; set; }
-        public string Category { get; set; }
-        public string Name { get; set; }
-        public string BlogUrl { get; set; }
-        public string Token { get; set; }
-        public string Email { get; set; }
+        .ToList();
     }
 }
