--- a/Core/Frontend/BlazorClient/Shared/NavMenu.razor
+++ b/Core/Frontend/BlazorClient/Shared/NavMenu.razor
@@ -13,7 +13,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
+            <NavLink class="nav-link" href="signup">
                 <span class="oi oi-plus" aria-hidden="true"></span> Sign Up
             </NavLink>
         </li>
