--- a/Core/Frontend/BlazorClient/Shared/NavMenu.razor
+++ b/Core/Frontend/BlazorClient/Shared/NavMenu.razor
@@ -18,7 +18,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
+            <NavLink class="nav-link" href="login">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Log In
             </NavLink>
         </li>
