--- a/Core/Frontend/BlazorClient/Pages/Login.razor
+++ b/Core/Frontend/BlazorClient/Pages/Login.razor
@@ -14,7 +14,8 @@
     <button class="btn btn-primary" @onclick="UserLogin">Submit</button>
 </EditForm>
 
-@code {
+@code 
+{
     private Blog blog;
 
     protected override void OnInitialized()
