--- a/Core/Frontend/BlazorClient/Pages/SignUp.razor
+++ b/Core/Frontend/BlazorClient/Pages/SignUp.razor
@@ -28,7 +28,8 @@
     <button class="btn btn-primary" @onclick="AddBlog">Submit</button>
 </EditForm>
 
-@code {
+@code 
+{
     public Blog blog;
 
     protected override void OnInitialized()
