--- a/Core/Frontend/BlazorClient/Shared/NavMenu.razor
+++ b/Core/Frontend/BlazorClient/Shared/NavMenu.razor
@@ -25,7 +25,8 @@
     </ul>
 </div>
 
-@code {
+@code 
+{
     private bool collapseNavMenu = true;
 
     private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
