--- a/Core/Frontend/BlazorClient/Pages/PostsList.razor
+++ b/Core/Frontend/BlazorClient/Pages/PostsList.razor
@@ -5,24 +5,36 @@
 <div>
     @foreach (var post in posts)
     {
-        <div class="container">
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title">@post.PostName</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">@post.BlogUrl</h6>
-                    <p class="card-text">@post.Category</p>
-                    <a href="" class="nav-link">Read</a>
-                </div>
+    <div class="container">
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title">@post.PostName</h5>
+                <h6 class="card-subtitle mb-2 text-muted">@post.BlogUrl</h6>
+                <p class="card-text">@post.Category</p>
+                <a href="" class="nav-link">Read</a>
             </div>
         </div>
+    </div>
     }
 </div>
 
-@code {
+@code
+{
+    [Parameter]
+    public string BlogId { get; set; }
+
     private List<Post> posts = new List<Post>();
 
     protected override async Task OnInitializedAsync()
     {
-        posts = await Http.GetFromJsonAsync<List<Post>>("https://blog-engine-api.herokuapp.com/api/post/" + blogId);
+        posts = await Http.GetFromJsonAsync<List<Post>>("https://blog-engine-api.herokuapp.com/api/post/" + BlogId);
+    }
+
+    protected override void OnParametersSet()
+    {
+        if (string.IsNullOrEmpty(BlogId))
+        {
+            Console.WriteLine("Could you please provide an ID?");
+        }
     }
 }
