--- a/Core/Frontend/BlazorClient/Pages/PostsList.razor
+++ b/Core/Frontend/BlazorClient/Pages/PostsList.razor
@@ -3,18 +3,25 @@
 @using BlazorClient.Models;
 
 <div>
-    @foreach (var post in posts)
+    @if (posts.Count() < 1)
     {
-    <div class="container">
-        <div class="card" style="width: 18rem;">
-            <div class="card-body">
-                <h5 class="card-title">@post.PostName</h5>
-                <h6 class="card-subtitle mb-2 text-muted">@post.BlogUrl</h6>
-                <p class="card-text">@post.Category</p>
-                <a href="" class="nav-link">Read</a>
+        <h2>Sorry, the blog has no posts yet...</h2>
+    }
+    else
+    {
+        foreach (var post in posts)
+        {
+            <div class="container">
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title">@post.PostName</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">@post.BlogUrl</h6>
+                        <p class="card-text">@post.Category</p>
+                        <a href="post/@post.Id" class="nav-link">Read</a>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
+        }
     }
 </div>
 
