--- a/Core/Frontend/BlazorClient/Pages/Login.razor
+++ b/Core/Frontend/BlazorClient/Pages/Login.razor
@@ -1,23 +1,25 @@
 @page "/login";
 @inject HttpClient Http;
 @inject IJSRuntime Js;
+@inject NavigationManager NavigationManager;
 @using BlazorClient.Models;
 
 <EditForm Model="blog">
     <div class="form-group">
         <label for="inputBlogUrl">Blog Url</label>
-        <input type="text" @bind="blog.BlogUrl" class="form-control" id="inputBlogUrl" placeholder="Type your blog's Url here">
+        <input type="text" @bind="blog.BlogUrl" class="form-control" id="inputBlogUrl"
+            placeholder="Type your blog's Url here">
     </div>
     <div class="form-group">
         <label for="inputToken">Token</label>
-        <input type="text" @bind="blog.Token" class="form-control" id="inputToken" placeholder="Input your token here">
+        <input type="password" @bind="blog.Token" class="form-control" id="inputToken" placeholder="Input your token here">
     </div>
     <button class="btn btn-primary" @onclick="UserLogin">Submit</button>
 </EditForm>
 
-@code 
+@code
 {
-    private Blog blog;
+    public Blog blog;
 
     protected override void OnInitialized()
     {
@@ -26,16 +28,16 @@
 
     private async Task UserLogin()
     {
-        var loggedIn = await Http.GetAsync($"https://blog-engine-api.herokuapp.com/auth/{blog.Token}/{blog.BlogUrl}");
-        var success = loggedIn.StatusCode == System.Net.HttpStatusCode.OK;
+        var loggedIn = await Http.GetFromJsonAsync<Blog>($"https://blog-engine-api.herokuapp.com/api/blogs/auth/{blog.Token}/{blog.BlogUrl}");
 
-        if (!success)
+        if (loggedIn == null)
         {
-            var error = await Js.InvokeAsync<JsonContent>("alert", 
+            var error = await Js.InvokeAsync<JsonContent>("alert",
                 $"Sorry, your token or url is invalid. Please, try again.");
             return;
         }
 
-        // TODO: Change returning type in API to Blog.
+        var route = $"/admin/blog/{loggedIn.Id}/{loggedIn.Token}";
+        NavigationManager.NavigateTo(route);
     }
 }
