It's possible now to edit and add posts. Still have a problem with EditForm

--- a/Core/Frontend/BlazorClient/Pages/LoggedIn/PostsList.razor
+++ b/Core/Frontend/BlazorClient/Pages/LoggedIn/PostsList.razor
@@ -19,7 +19,7 @@
                         <h5 class="card-title">@post.PostName</h5>
                         <h6 class="card-subtitle mb-2 text-muted">@post.BlogUrl</h6>
                         <p class="card-text">@post.Category</p>
-                        <a class="nav-link" @onclick="@(e => EditPost(post.Id))">Edit</a>
+                        <button class="btn btn-primary" @onclick="@(e => EditPost(post.Id))">Edit</button>
                     </div>
                 </div>
             </div>
@@ -53,13 +53,13 @@
 
     private void AddPost()
     {
-        var route = $"/admin/add-post/{blog.BlogUrl}/{Token}";
+        var route = $"/admin/add-post/{blog.BlogUrl}/{Token}/{blog.Id}";
         NavigationManager.NavigateTo(route);
     }
 
     private void EditPost(string postId)
     {
-        var route = $"/admin/edit-post/{postId}/{Token}";
+        var route = $"/admin/edit-post/{postId}/{Token}/{blog.Id}";
         NavigationManager.NavigateTo(route);
     }
 }
