--- a/Core/Frontend/BlazorClient/Pages/LoggedIn/AddPost.razor
+++ b/Core/Frontend/BlazorClient/Pages/LoggedIn/AddPost.razor
@@ -1,9 +1,11 @@
-@page "/admin/add-post/{blogUrl}/{token}";
+@page "/admin/add-post/{blogUrl}/{token}/{blogId}";
 @inject HttpClient Http;
 @inject IJSRuntime Js;
+@inject NavigationManager NavigationManager;
 @using BlazorClient.Models;
 
 <EditForm Model="@post">
+    <button class="btn btn-primary" @onclick="GoHome">Home</button>
     <div class="form-group">
         <label for="inputName">Post's Name</label>
         <input type="text" @bind="post.PostName" class="form-control" id="inputName" placeholder="Enter Name">
@@ -15,7 +17,8 @@
     </div>
     <div class="form-group">
         <label for="inputUrl">Write the content of your post in HTML</label>
-        <textarea style="height:250px" @bind="post.Content" class="form-control" id="inputUrl" placeholder="Content"></textarea>
+        <textarea style="height:250px" @bind="post.Content" class="form-control" id="inputUrl"
+            placeholder="Content"></textarea>
     </div>
     <button class="btn btn-primary" @onclick="SubmitPost">Submit</button>
 </EditForm>
@@ -26,6 +29,8 @@
     public string Token { get; set; }
     [Parameter]
     public string BlogUrl { get; set; }
+    [Parameter]
+    public string BlogId { get; set; }
 
     private Post post;
 
@@ -48,7 +53,7 @@
 
         var url = $"https://blog-engine-api.herokuapp.com/api/post/{Token}";
         var posted = await Http.PostAsJsonAsync<Post>(url, post);
-        
+
         if (posted == null)
         {
             var error = await Js.InvokeAsync<JsonContent>("alert",
@@ -57,13 +62,19 @@
         }
 
         var success = await Js.InvokeAsync<JsonContent>("alert",
-                $"Everything's fine!");
+            $"Everything's fine!");
     }
 
-    public bool PostIsFull(Post post)
+    private void GoHome()
     {
-        return !(post == null || string.IsNullOrEmpty(post.PostName) 
+        var route = $"/admin/blog/{BlogId}/{Token}";
+        NavigationManager.NavigateTo(route);
+    }
+
+    private bool PostIsFull(Post post)
+    {
+        return !(post == null || string.IsNullOrEmpty(post.PostName)
             || string.IsNullOrEmpty(post.Content)
-            || string.IsNullOrEmpty(post.Category));
+        || string.IsNullOrEmpty(post.Category));
     }
 }
