Switched authorization to email

--- a/Core/Frontend/BlazorClient/Pages/PostPage.razor
+++ b/Core/Frontend/BlazorClient/Pages/PostPage.razor
@@ -5,7 +5,9 @@
 <div class="container">
     <h2 class="display-2">@post.PostName</h2>
     <p class="lead">@post.Category</p>
-    @Content
+    <div class="container">
+        @Content
+    </div>
 </div>
 
 @code
