--- a/Core/Frontend/BlazorClient/Pages/Login.razor
+++ b/Core/Frontend/BlazorClient/Pages/Login.razor
@@ -6,9 +6,9 @@
 
 <EditForm Model="@blog">
     <div class="form-group">
-        <label for="inputBlogUrl">Blog Url</label>
-        <input type="text" @bind="blog.BlogUrl" class="form-control" id="inputBlogUrl"
-            placeholder="Type your blog's Url here">
+        <label for="inputBlogUrl">Email</label>
+        <input type="email" @bind="blog.Email" class="form-control" id="inputBlogUrl"
+            placeholder="Put your email here">
     </div>
     <div class="form-group">
         <label for="inputToken">Token</label>
@@ -28,7 +28,7 @@
 
     private async Task UserLogin()
     {
-        var loggedIn = await Http.GetFromJsonAsync<Blog>($"https://blog-engine-api.herokuapp.com/api/blogs/auth/{blog.Token}/{blog.BlogUrl}");
+        var loggedIn = await Http.GetFromJsonAsync<Blog>($"https://blog-engine-api.herokuapp.com/api/blogs/auth/{blog.Token}/{blog.Email}");
 
         if (loggedIn == null)
         {
