--- a/Core/Frontend/BlazorClient/Shared/MainLayout.razor
+++ b/Core/Frontend/BlazorClient/Shared/MainLayout.razor
@@ -7,7 +7,7 @@
 
     <div class="main">
         <div class="top-row px-4">
-            <a href="" target="_blank" class="ml-md-auto">About</a>
+            <a href="https://github.com/potyoma/BlogEngine" target="_blank" class="ml-md-auto">About</a>
         </div>
 
         <div class="content px-4">
