--- a/Core/Frontend/BlazorClient/Pages/SignUp.razor
+++ b/Core/Frontend/BlazorClient/Pages/SignUp.razor
@@ -52,7 +52,7 @@
         }
         catch (NullReferenceException ex)
         {
-            Console.WriteLine("Blog is empty");
+            Console.WriteLine($"Blog is empty: {ex.Message}");
             return;
         }
     }
